[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/main_menu/SelectorButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/main_menu/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Menus/main_menu.tres" type="Theme" id=3]
[ext_resource path="res://menus/main_menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MenuContainer"]
margin_left = 325.0
margin_right = 475.0
margin_bottom = 60.0
size_flags_horizontal = 4
text = "ROGUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MenuContainer"]
margin_left = 30.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 406.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" parent="MenuContainer/Buttons" instance=ExtResource( 1 )]

[node name="Continue" parent="MenuContainer/Buttons" instance=ExtResource( 1 )]
margin_top = 70.0
margin_bottom = 136.0

[node name="Options" parent="MenuContainer/Buttons" instance=ExtResource( 1 )]
margin_top = 140.0
margin_bottom = 206.0

[node name="Info" type="VBoxContainer" parent="MenuContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -56.0
margin_right = 804.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dev" type="Label" parent="MenuContainer/Info"]
margin_right = 780.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MenuContainer/Info"]
margin_top = 20.0
margin_right = 780.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
